--- a/executorengine/src/main/AndroidManifest.xml
+++ b/executorengine/src/main/AndroidManifest.xml
@@ -1,2 +1,5 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="cn.vove7.executorengine" />
+    package="cn.vove7.executorengine" >
+
+    <uses-permission android:name="android.permission.CALL_PHONE" />
+</manifest>
