--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,12 +3,17 @@
     package="cn.vove7.accessibilityservicedemo">
 
     <uses-permission android:name="android.permission.VIBRATE" />
-
+    <uses-permission android:name="android.permission.READ_CONTACTS" />
     <uses-permission android:name="android.permission.RECORD_AUDIO" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.READ_PHONE_STATE" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.FLASHLIGHT" />
+    <uses-permission android:name="android.permission.CAMERA" />
+
+    <uses-feature android:name="android.hardware.camera" />
+    <uses-feature android:name="android.hardware.autofocus" />
 
     <application
         android:name=".App"
@@ -18,13 +23,16 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <meta-data android:name="com.baidu.speech.APP_ID" android:value="11389525" />
+        <meta-data
+            android:name="com.baidu.speech.APP_ID"
+            android:value="11389525" />
         <meta-data
             android:name="com.baidu.speech.API_KEY"
             android:value="ILdLUepG75UwwQVa0rqiEUVa" />
         <meta-data
             android:name="com.baidu.speech.SECRET_KEY"
             android:value="di6djKXGGELgnCCusiQUlCBYRxXVrr46" />
+
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -52,9 +60,15 @@
             android:enabled="true"
             android:exported="true" />
 
-        <activity android:name=".VoiceTestActivity"/>
-        <service android:name="com.baidu.speech.VoiceRecognitionService" android:exported="false" />
+        <activity android:name=".VoiceTestActivity" />
 
+        <service
+            android:name="com.baidu.speech.VoiceRecognitionService"
+            android:exported="false" />
+        <service
+            android:name=".services.MainService"
+            android:enabled="true"
+            android:exported="true"></service>
     </application>
 
 </manifest>
