--- a/build.gradle
+++ b/build.gradle
@@ -2,16 +2,18 @@
 
 buildscript {
     ext.kotlin_version = '1.2.50'
+    ext.greendao_version = '3.2.2'
 
     repositories {
         google()
         jcenter()
+        mavenCentral()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.1.2'
+        classpath 'com.android.tools.build:gradle:3.1.3'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         classpath "org.jetbrains.kotlin:kotlin-android-extensions:$kotlin_version"
-
+        classpath "org.greenrobot:greendao-gradle-plugin:$greendao_version" // greendao
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
