--- a/Common/build.gradle
+++ b/Common/build.gradle
@@ -3,21 +3,20 @@ apply plugin: 'kotlin-android'
 
 android {
     compileSdkVersion 27
-
     defaultConfig {
         minSdkVersion 21
         targetSdkVersion 27
         versionCode 1
         versionName "1.0"
     }
-
     buildTypes {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
-
+    productFlavors {
+    }
 }
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
