--- a/androlua/build.gradle
+++ b/androlua/build.gradle
@@ -39,6 +39,8 @@ dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation "com.github.Vove7:VTP:$vtp_version"
     implementation project(':Common')
+    implementation project(':datamanager')
+    implementation project(':appbus')
 }
 repositories {
     mavenCentral()
