--- a/androlua/build.gradle
+++ b/androlua/build.gradle
@@ -10,7 +10,7 @@ android {
         versionName "1.0"
 
         ndk {
-            abiFilters 'armeabi-v7a'//, 'arm64-v8a'
+            abiFilters 'armeabi-v7a', 'arm64-v8a'
         }
     }
     buildTypes {
@@ -39,8 +39,6 @@ dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation "com.github.Vove7:VTP:$vtp_version"
     implementation project(':Common')
-    implementation project(':datamanager')
-    implementation project(':appbus')
 }
 repositories {
     mavenCentral()
