--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,8 +39,6 @@ android {
         targetCompatibility JavaVersion.VERSION_1_8
     }
     dexOptions {
-        //使用增量模式构建
-        incremental true
         //最大堆内存
         javaMaxHeapSize "4g"
         //是否支持大工程模式
@@ -56,7 +54,7 @@ android {
 
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
-    implementation 'com.android.support:appcompat-v7:27.1.1'
+    implementation 'com.android.support:appcompat-v7:27.1.+'
     implementation 'com.android.support:design:27.1.1'
     implementation 'com.android.support.constraint:constraint-layout:1.1.1'
     testImplementation 'junit:junit:4.12'
