fix lua get set add lua api add inst manage add voice wakeup . setting ui

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -92,6 +92,9 @@
         <activity
             android:name=".activities.MarkedManageActivity"
             android:theme="@style/NoActionBar" />
+        <activity
+            android:name=".activities.SettingsActivity"
+            android:label="@string/title_activity_settings"></activity>
     </application>
 
 </manifest>
