--- a/Common/build.gradle
+++ b/Common/build.gradle
@@ -22,7 +22,7 @@ dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation "com.github.Vove7:VTP:$vtp_version"
-    implementation project(path: ':datamanager')
+    api "org.greenrobot:greendao:$greendao_version"
     implementation 'com.android.support:support-annotations:27.1.1'
     implementation project(':appbus')
 }
