--- a/androlua/build.gradle
+++ b/androlua/build.gradle
@@ -9,9 +9,9 @@ android {
         versionCode 1
         versionName "1.0"
 
-//        ndk {
-//            abiFilters 'armeabi-v7a', 'arm64-v8a', 'x86', 'x86_64'
-//        }
+        ndk {
+            abiFilters 'armeabi-v7a'//, 'arm64-v8a', 'x86', 'x86_64'
+        }
     }
     buildTypes {
         release {
@@ -39,6 +39,7 @@ dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation "com.github.Vove7:VTP:$vtp_version"
     implementation project(':Common')
+    implementation project(path: ':appbus')
 }
 repositories {
     mavenCentral()
