--- a/datamanager/build.gradle
+++ b/datamanager/build.gradle
@@ -22,24 +22,16 @@ android {
     productFlavors {
     }
 }
-greendao {
-    //数据库的schema版本，也可以理解为数据库版本号
-    schemaVersion 1
-    //设置DaoMaster、DaoSession、Dao包名，也就是要放置这些类的包的全路径。
-    daoPackage 'cn.vove7.datamanager.greendao'
-    //设置DaoMaster、DaoSession、Dao目录
-    targetGenDir 'src/main/java'
-}
 
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation 'com.android.support:appcompat-v7:27.1.1'
     testImplementation 'junit:junit:4.12'
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
-    api "org.greenrobot:greendao:$greendao_version"
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
     implementation "com.github.Vove7:VTP:$vtp_version"
+    implementation project(path: ':Common')
 }
 repositories {
     mavenCentral()
