--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="cn.vove7.jarvis">
 
     <!-- 语音识别 -->
@@ -29,7 +30,8 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
+        android:theme="@style/AppTheme"
+        tools:ignore="GoogleAppIndexingWarning">
         <meta-data
             android:name="com.baidu.speech.APP_ID"
             android:value="10922901" />
@@ -105,6 +107,8 @@
         <activity
             android:name=".activities.RealMainActivity"
             android:theme="@style/NoActionBar" />
+        <activity android:name=".activities.WelcomeActivity"
+            android:theme="@style/NoActionBar"/>
     </application>
 
 </manifest>
