加入按键唤醒 震动api fix DebugServer 中文乱码

--- a/executorengine/src/main/AndroidManifest.xml
+++ b/executorengine/src/main/AndroidManifest.xml
@@ -2,4 +2,5 @@
     package="cn.vove7.executorengine" >
 
     <uses-permission android:name="android.permission.CALL_PHONE" />
+    <uses-permission android:name="android.permission.VIBRATE" />
 </manifest>
