--- a/Common/build.gradle
+++ b/Common/build.gradle
@@ -3,10 +3,10 @@ apply plugin: 'kotlin-android'
 apply plugin: 'org.greenrobot.greendao'
 
 android {
-    compileSdkVersion 27
+    compileSdkVersion 28
     defaultConfig {
         minSdkVersion 21
-        targetSdkVersion 27
+        targetSdkVersion 28
         versionCode 1
         versionName "1.0"
     }
@@ -35,5 +35,5 @@ dependencies {
     api "com.github.Vove7:VTP:$vtp_version"
     api 'org.greenrobot:eventbus:3.1.1'
     api "org.greenrobot:greendao:$greendao_version"
-    implementation 'com.android.support:support-annotations:27.1.1'
+    api "com.android.support:support-annotations:${support_version}"
 }
