--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,12 +4,12 @@ apply plugin: 'kotlin-android-extensions'
 apply plugin: 'org.greenrobot.greendao'
 
 android {
-    compileSdkVersion 27
-    buildToolsVersion '27.0.3'
+    compileSdkVersion 28
+    buildToolsVersion '28.0.2'
     defaultConfig {
         applicationId "cn.vove7.vassistant"
         minSdkVersion 21
-        targetSdkVersion 27
+        targetSdkVersion 28
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
@@ -60,8 +60,8 @@ dependencies {
     implementation 'com.l4digital.fastscroll:fastscroll:1.1.2'
     implementation "com.android.support:appcompat-v7:${support_version}"
     implementation "com.android.support:design:${support_version}"
-    implementation 'com.android.support.constraint:constraint-layout:1.1.1'
-    implementation 'com.android.support:support-v4:27.1.1'
+    implementation 'com.android.support.constraint:constraint-layout:1.1.3'
+    implementation "com.android.support:support-v4:${support_version}@aar"
     testImplementation 'junit:junit:4.12'
 //    androidTestImplementation 'com.android.support.test:runner:1.0.2'
 //    androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
@@ -69,13 +69,20 @@ dependencies {
     implementation "com.android.support:cardview-v7:${support_version}"
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation "com.github.Vove7:VTP:$vtp_version"
+    implementation 'org.raphets:roundimageview:1.2.0'
     implementation files('libs/bdasr_V3_20180320_9066860.jar')
     implementation project(':parseengine')
     implementation project(':executorengine')
     implementation project(':Common')
     implementation project(path: ':androlua')
     implementation project(path: ':rhino-android')
+    implementation "org.jetbrains.kotlin:kotlin-reflect:$kotlin_version"
+    implementation 'com.afollestad.material-dialogs:core:2.0.0-alpha07'
+    implementation 'com.afollestad.material-dialogs:input:2.0.0-alpha06'
+    implementation 'org.adw.library:discrete-seekbar:1.0.1'
+
 }
 repositories {
     mavenCentral()
+    maven { url "https://dl.bintray.com/drummer-aidan/maven/" }
 }
