--- a/build.gradle
+++ b/build.gradle
@@ -4,7 +4,7 @@ buildscript {
     ext.kotlin_version = '1.2.60'
     ext.greendao_version = '3.2.2'
     ext.vtp_version = '0.0.22'
-    ext.support_version = '27.1.1'
+    ext.support_version = '28.0.0-rc02'
 
     repositories {
         google()
