--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -56,6 +56,7 @@
         <activity
             android:name=".activities.RealMainActivity"
             android:excludeFromRecents="true"
+            android:windowSoftInputMode="adjustPan"
             android:theme="@style/TranslucentStatus.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -121,7 +122,7 @@
         <activity android:name=".activities.AppAdListActivity" />
         <activity
             android:name=".activities.AdvancedSettingActivity"
-            android:label="@string/title_advanced_settings"
+            android:label="@string/text_advanced_features"
             android:theme="@style/AppTheme" />
     </application>
 
