--- a/app/build.gradle
+++ b/app/build.gradle
@@ -81,6 +81,7 @@ dependencies {
 
     implementation 'com.github.didikee:AndroidDonate:0.1.0'
     implementation(name: 'securedpreferencestore-0.7.4', ext: 'aar')
+    implementation 'com.github.kbiakov:CodeView-android:1.3.1'
 }
 repositories {
     mavenCentral()
