加入网络api（示例参考js编辑器中的'天气.js'） 加入屏幕文字提取(同步最新数据后，使用文字提取 ) 加入数据自动更新和一键更新(高级中) 加入指令详情代码复制 加入百度语言处理
-------
提取数据同步操作至DataUpdator
修改ParseEngine 参数isFollow

--- a/Common/build.gradle
+++ b/Common/build.gradle
@@ -40,4 +40,7 @@ dependencies {
     api "com.android.support:support-annotations:${support_version}"
     api 'com.google.code.gson:gson:2.8.5'
     api 'com.squareup.okhttp3:okhttp:3.11.0'
+    implementation files('libs/aip-java-sdk-4.4.1.jar')
+    implementation files('libs/json-20160810.jar')
+    implementation files('libs/log4j-1.2.17.jar')
 }
