--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,7 +14,7 @@
     <!-- 闪光灯，相机 -->
     <uses-permission android:name="android.permission.FLASHLIGHT" />
     <uses-permission android:name="android.permission.CAMERA" />
-    <uses-permission android:name="android.permission.FOREGROUND_SERVICE"/>
+    <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
 
     <uses-feature android:name="android.hardware.camera" />
     <uses-feature android:name="android.hardware.autofocus" />
@@ -33,8 +33,8 @@
 
     <uses-permission android:name="android.permission.WAKE_LOCK" />
 
-    <uses-permission android:name="android.permission.INSTALL_SHORTCUT"/>
-    <uses-permission android:name="android.permission.UNINSTALL_SHORTCUT"/>
+    <uses-permission android:name="android.permission.INSTALL_SHORTCUT" />
+    <uses-permission android:name="android.permission.UNINSTALL_SHORTCUT" />
     <uses-permission
         android:name="android.permission.DEVICE_POWER"
         tools:ignore="ProtectedPermissions" />
@@ -48,10 +48,10 @@
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher_vassist"
         android:label="@string/app_name"
+        android:networkSecurityConfig="@xml/network_security_config"
         android:roundIcon="@mipmap/ic_launcher_vassist"
         android:supportsRtl="true"
         android:theme="@style/NoActionBar"
-        android:networkSecurityConfig="@xml/network_security_config"
         tools:ignore="GoogleAppIndexingWarning">
         <meta-data
             android:name="com.baidu.speech.APP_ID"
@@ -85,7 +85,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
             <!--<meta-data android:name="android.app.shortcuts"-->
-                <!--android:resource="@xml/shortcuts" />-->
+            <!--android:resource="@xml/shortcuts" />-->
         </activity>
         <!--<activity android:name=".activities.MainActivity" />-->
 
@@ -143,7 +143,8 @@
             android:name=".activities.NewInstActivity"
             android:launchMode="singleTop"
             android:windowSoftInputMode="adjustPan" />
-        <activity android:name=".activities.WelcomeActivity"
+        <activity
+            android:name=".activities.WelcomeActivity"
             android:launchMode="singleTop" />
         <activity android:name=".activities.MarkedManagerActivity" />
         <activity android:name=".activities.AppAdListActivity" />
@@ -164,17 +165,25 @@
             android:name=".activities.base.LaboratoryActivity"
             android:label="@string/text_laboratory"
             android:theme="@style/AppTheme" />
-        <activity android:name=".activities.InstDetailActivity"
-            android:theme="@style/TranslucentStatus.NoActionBar"/>
-        <activity android:name=".activities.OSLActivity"
-            android:label="@string/text_open_source_libraries"/>
-        <activity android:name=".activities.LuaEditorActivity"
-            android:label="Lua编辑器"
+        <activity
+            android:name=".activities.InstDetailActivity"
+            android:theme="@style/TranslucentStatus.NoActionBar" />
+        <activity
+            android:name=".activities.OSLActivity"
+            android:label="@string/text_open_source_libraries" />
+        <activity
+            android:name=".activities.LuaEditorActivity"
+            android:label="@string/text_lua_editor"
             android:theme="@style/AppTheme" />
-        <activity android:name=".activities.JsEditorActivity"
-            android:label="Js编辑器"
+        <activity
+            android:name=".activities.JsEditorActivity"
+            android:label="@string/text_js_editor"
             android:theme="@style/Theme.Darcula"
             android:windowSoftInputMode="adjustResize" />
+        <activity
+            android:name=".activities.ScreenPickerActivity"
+            android:theme="@style/ScreenPicker"
+            android:launchMode="singleInstance" />
 
     </application>
 
