fix 7.1.1及以下设备识别结束崩溃问题 移除对[5.0-6.0)的支持 fix 部分设备截屏崩溃问题

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,10 +8,10 @@ android {
     buildToolsVersion '28.0.2'
     defaultConfig {
         applicationId "cn.vove7.vassistant"
-        minSdkVersion 21
+        minSdkVersion 23
         targetSdkVersion 27
-        versionCode 25
-        versionName "1.2.1"
+        versionCode 26
+        versionName "1.2.1_0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
         testApplicationId = 'cn.vove7.vassistant_test'
     }
