添加api system.sendSMS(phone: String, content: String) system.getLaunchIntent(pkg:String) system.getPhoneByName(name: String) runtime.focusView ViewNode.appendText()

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,6 +4,7 @@
     package="cn.vove7.jarvis">
 
     <!-- 语音识别 -->
+    <uses-permission android:name="android.permission.USE_FINGERPRINT" />
     <uses-permission android:name="android.permission.VIBRATE" />
     <uses-permission android:name="android.permission.RECORD_AUDIO" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
@@ -46,7 +47,6 @@
 
     <uses-permission android:name="android.permission.DISABLE_KEYGUARD" />
     <uses-permission android:name="android.permission.WAKE_LOCK" />
-
 
     <uses-feature
         android:name="android.hardware.bluetooth_le"
