辅助应用模式 加入屏幕识别 QR/条形码识别

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -87,6 +87,7 @@
         <activity
             android:name=".activities.RealMainActivity"
             android:excludeFromRecents="true"
+            android:autoRemoveFromRecents="true"
             android:launchMode="singleTask"
             android:theme="@style/TranslucentStatus.NoActionBar"
             android:windowSoftInputMode="adjustPan">
