--- a/app/build.gradle
+++ b/app/build.gradle
@@ -14,6 +14,10 @@ android {
         versionName "1.3.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
         testApplicationId = 'cn.vove7.vassistant_test'
+
+        ndk {//排除其他 abi
+            abiFilters "armeabi-v7a"
+        }
     }
     buildTypes {
         release {
@@ -58,6 +62,7 @@ android {
     }
     productFlavors {
     }
+
 }
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
@@ -69,6 +74,7 @@ dependencies {
     //    androidTestImplementation 'com.android.support.test:runner:1.0.2'
     //    androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
     implementation "com.android.support:cardview-v7:${support_version}"
+    implementation "com.android.support:palette-v7:$support_version"
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation "com.github.Vove7:VTP:$vtp_version"
     //    implementation 'org.raphets:roundimageview:1.2.0'
@@ -85,7 +91,9 @@ dependencies {
     implementation(name: 'securedpreferencestore-0.7.4', ext: 'aar')
     implementation 'com.github.kbiakov:CodeView-android:1.3.1'
     implementation 'com.github.KeepSafe:TapTargetView:1.12.0'
-
+    implementation 'com.google.zxing:core:3.2.0'
+    implementation 'com.github.bumptech.glide:glide:4.8.0'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.8.0'
 }
 repositories {
     maven { url 'https://jitpack.io' }
