(sp加密)由于适配，此次更新需要重新登陆
修复引擎未就识别导致崩溃
添加设置长按延时
修复App内指令设为全局失败
添加[快捷唤醒]桌面小部件
静音功能适配
添加api：
  ViewFinder.waitHide()
  全局多手势gestures()和gesturesAsync() //test

--- a/Common/build.gradle
+++ b/Common/build.gradle
@@ -39,6 +39,7 @@ dependencies {
     api "org.greenrobot:greendao:$greendao_version"
     api "com.android.support:support-annotations:${support_version}"
     api 'com.google.code.gson:gson:2.8.5'
+    api 'com.android.support:multidex:1.0.1'
     api 'com.squareup.okhttp3:okhttp:3.11.0'
     api files('libs/aip-java-sdk-4.4.1.jar')
     api files('libs/json-20160810.jar')
