--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -34,14 +34,16 @@
     <uses-permission android:name="android.permission.UNINSTALL_SHORTCUT" />
     <uses-permission android:name="com.android.alarm.permission.SET_ALARM" />
     <uses-permission android:name="android.permission.WRITE_CALENDAR" />
-    <uses-permission android:name="android.permission.READ_CALENDAR" /> <!-- ??? -->
+    <uses-permission android:name="android.permission.READ_CALENDAR" />
+    <!-- ??? -->
     <permission
         android:name="android.permission.INTERACT_ACROSS_USERS_FULL"
         android:protectionLevel="signature" />
 
     <uses-permission android:name="android.permission.DISABLE_KEYGUARD" />
     <uses-permission android:name="android.permission.WAKE_LOCK" />
-
+    <!--解锁监听-->
+    <uses-permission android:name="android.permission.RECEIVE_USER_PRESENT" />
     <uses-feature
         android:name="android.hardware.bluetooth_le"
         android:required="true" />
