在其他App内由于麦克风占用关闭唤醒时, 熄屏开启唤醒 加入长按耳机中键唤醒设置 添加快捷方式，其他应用可通过此方式唤醒(如[悬浮菜单]中选择快捷方式) 悬浮面板显示语音回复内容

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -47,7 +47,9 @@
     <uses-feature
         android:name="android.hardware.bluetooth_le"
         android:required="true" />
-
+    <uses-permission
+        android:name="android.permission.WRITE_SECURE_SETTINGS"
+        tools:ignore="ProtectedPermissions" />
     <application
         android:name=".App"
         android:allowBackup="true"
@@ -104,6 +106,17 @@
             <!-- <meta-data android:name="android.app.shortcuts" -->
             <!-- android:resource="@xml/shortcuts" /> -->
         </activity> <!-- <activity android:name=".activities.MainActivity" /> -->
+        <activity
+            android:name=".activities.base.CreateShortActivity"
+            android:exported="true"
+            android:launchMode="singleInstance"
+            android:theme="@style/TransparentBackground">
+            <intent-filter>
+                <!--快捷方式-->
+                <action android:name="android.intent.action.CREATE_SHORTCUT" />
+            </intent-filter>
+        </activity>
+
         <activity
             android:name=".activities.base.VoiceAssistActivity"
             android:launchMode="singleInstance"
