开放脚本编辑、新建指令、指令分享、新建标记等功能 限制文字提取

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -97,7 +97,7 @@
             android:excludeFromRecents="true"
             android:launchMode="singleTask"
             android:theme="@style/TranslucentStatus.NoActionBar"
-            android:windowSoftInputMode="adjustPan">
+            android:windowSoftInputMode="adjustNothing">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
